--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -27,3 +28,9 @@ Temporary Items
 
 # IDE
 .idea/
+
+# Office
+~$*
+
+# python
+__pycache__
